# ComfyUI-zaiduyun

./: .gitignore  Comfly.py  README.md  __init__.py  fal_batch_nodes.py  pyproject.toml
ComfyUI-zaiduyun-master/: Comfly.py  requirements.txt
workflow/: (支持真人)Seedance2.0图生视频V1（贞贞的AI工坊）.json  (最强满血版-支持真人)Seedance2.0多参生视频V1（贞贞的AI工坊）.json  (最高性价比方案)Seedance2.0+Fast+480P+FlashVSR多参生视频-贞贞工坊.json  (最高性价比方案-支持真人)Seedance2.0图生视频+Flashvsr高清化（贞贞的AI工坊）.json  (脱敏版-支持真人)Seedance2.0满血视频参考生视频V1（贞贞的AI工坊）.json  (贞贞ID脱敏复用版)Seedance2.0满血版多参生视频V1（贞贞的AI工坊）.json  (资产ID复用版)Seedance2.0满血版多参生视频V2（贞贞的AI工坊）.json  (资产组合版)Seedance2.0满血版多参生视频V1（贞贞的AI工坊）.json  (首尾帧-支持真人)Seedance2.0满血版视频V1（贞贞的AI工坊）.json  Seedance2.0-asset-upload-2.json  Seedance2.0-multiref-video-generate-new.json  Suno+V5.5顶级纯音乐生成V1(基准0.5_两首歌-贞贞AI工坊).json  gpt-image-2-4K官方版（需要修改分组）.json  gpt-image-2-all工作流.json  gpt-image-2-全量版图像编辑.json  gpt-image-2-全量版文生图 .json  grok-video-30s-multi-ref-image-to-video.json  seedance2.0-multiref-video-generate-asset-bundle.json  sora2-new-stability-version.json  veo3-t2v-pro.json  veo3.1-lite-multi-ref-image-to-video.json  zhenzhen Doubao SeedEdit (1).json  zhenzhen-GeminiAPI.json  zhenzhen-Midjourney.json  zhenzhen-Nano-Banana-2-Edit-S2A.json  zhenzhen-Nano-Banana-2-Edit-T2I-4K.json  zhenzhen-Nano-Banana-Edit-Proportion-multi-image.json  zhenzhen-Nano-Banana-Edit-Proportion-single-image.json  zhenzhen-bernini-r-edit-image-fal-图像编辑.json  zhenzhen-bernini-r-video-fal-参考生视频及视频编辑.json  zhenzhen-boogu-image-fal文生图及图像编辑.json  zhenzhen-bria-fibo-edit-fal图像编辑.json  zhenzhen-bria-genfill-v2-fal图像编辑.json  zhenzhen-bria-video-background-removal-v3-fal视频去背景.json  zhenzhen-cosmos-3-super-fal图生视频.json  (+107 more)
(+50 files in other folders)
